# CosmoBot

./: CONTRIBUTING.md  README.md  config.py  contributing.md  globals.py  main.py  pyproject.toml
src/cosmobot/cogs/dev/: embeds.py  extensions.py
src/cosmobot/cogs/games/: roll.py
src/cosmobot/cogs/moderation/: ban.py  kick.py  mod_logs.py  modpanel.py  timeout.py  userinfo.py  warn.py
src/cosmobot/cogs/utility/: afk.py  levelling.py  ping.py
src/cosmobot/setup/: output.py
