[project]
name = "CosmoBot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "EpicSprout", email = "EpicSprout@proton.me"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false
